--- a/shuttlings-cch24/Cargo.toml
+++ b/shuttlings-cch24/Cargo.toml
@@ -9,3 +9,4 @@ serde = { version = "1.0", features = ["derive"] }
 shuttle-axum = "0.49.0"
 shuttle-runtime = "0.49.0"
 tokio = "1.28.2"
+toml = "0.8.19"
